@@ -88,7 +88,7 @@
     <maven-bundle-plugin.version>5.1.8</maven-bundle-plugin.version>
     <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
     <maven-dependency-plugin.version>3.8.1</maven-dependency-plugin.version>
-    <maven-enforcer-plugin.version>3.5.0</maven-enforcer-plugin.version>
+    <maven-enforcer-plugin.version>3.6.1</maven-enforcer-plugin.version>
     <maven-failsafe-plugin.version>3.5.3</maven-failsafe-plugin.version>
     <maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
     <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
@@ -102,7 +102,7 @@
     <json-path.version>2.9.0</json-path.version>
     <json-smart.version>2.5.2</json-smart.version>
     <json-simple.version>4.0.1</json-simple.version>
-    <jackson.version>2.19.1</jackson.version>
+    <jackson.version>2.19.2</jackson.version>
 
     <!-- Reproducible https://maven.apache.org/guides/mini/guide-reproducible-builds.html -->
     <project.build.outputTimestamp>2023-01-01T00:00:00Z</project.build.outputTimestamp>
@@ -122,7 +122,7 @@
     <commons-text.version>1.13.1</commons-text.version>
     <sun.mail.version>2.0.1</sun.mail.version>
     <dom4j.version>2.2.0</dom4j.version>
-    <equalsverifier.version>4.0.4</equalsverifier.version>
+    <equalsverifier.version>4.0.6</equalsverifier.version>
     <failureaccess.version>1.0.3</failureaccess.version>
     <findbugs-annotations.version>1.3.9-1</findbugs-annotations.version>
     <git-commit-id.version>9.0.2</git-commit-id.version>
@@ -149,7 +149,7 @@
     <joda-time.version>2.14.0</joda-time.version>
     <junit-dataprovider.version>1.13.1</junit-dataprovider.version>
     <junit.version>4.13.2</junit.version>
-    <log4j2.version>2.25.0</log4j2.version>
+    <log4j2.version>2.25.1</log4j2.version>
     <maven-javadoc.version>3.11.2</maven-javadoc.version>
     <mockito.version>5.18.0</mockito.version>
     <okhttp.version>4.12.0</okhttp.version>
@@ -168,11 +168,11 @@
     <spring-security-oauth2-authorization-server.version>1.5.1</spring-security-oauth2-authorization-server.version>
     <spring-security.version>6.5.1</spring-security.version>
     <springdoc-openapi-stater-common.version>2.8.9</springdoc-openapi-stater-common.version>
-    <springframework.version>6.2.8</springframework.version>
+    <springframework.version>6.2.9</springframework.version>
     <thrift.version>0.20.0</thrift.version>
     <wiremock.version>3.13.1</wiremock.version>
     <arquillian-graphene.version>2.5.4</arquillian-graphene.version>
-    <keycloak.version>26.3.0</keycloak.version>
+    <keycloak.version>26.3.1</keycloak.version>
     <org.owasp.encoder.version>1.3.1</org.owasp.encoder.version>
     <write.properties.file.version>2.0.0</write.properties.file.version>
   </properties>
@@ -721,6 +721,10 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${maven-surefire-plugin.version}</version>
+          <configuration>
+            <argLine>@{argLine} -javaagent:${org.mockito:mockito-core:jar}</argLine>
+            <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
